--- a/apache-alias/templates/default/site.conf.erb
+++ b/apache-alias/templates/default/site.conf.erb
@@ -1,14 +1,14 @@
 <VirtualHost *:80>
   ServerName <%= @domain %>
-  ServerAlias <%= default['apache_alias']['application_name'] %>
-  DocumentRoot /srv/www/<%= default['apache_alias']['application_name'] %>/current
+  ServerAlias <%= node['apache_alias']['application_name'] %>
+  DocumentRoot /srv/www/<%= node['apache_alias']['application_name'] %>/current
 
-  AliasMatch ^/blog(.*)$ /srv/www/<%= default['apache_alias']['application_name'] %>/current$1
+  AliasMatch ^/blog(.*)$ /srv/www/<%= node['apache_alias']['application_name'] %>/current$1
 
   RewriteEngine On
-  RewriteRule ^(?!/blog/)(.*) <%= default['apache_alias']['siteurl'] %>$1
+  RewriteRule ^(?!/blog/)(.*) <%= node['apache_alias']['siteurl'] %>$1
 
-  <Directory /srv/www/<%= default['apache_alias']['application_name'] %>/current/>
+  <Directory /srv/www/<%= node['apache_alias']['application_name'] %>/current/>
     Options FollowSymLinks
     AllowOverride All
     Order allow,deny
@@ -26,17 +26,17 @@
   </Directory>
 
   LogLevel info
-  ErrorLog /var/log/apache2/<%= default['apache_alias']['application_name'] %>-error.log
-  CustomLog /var/log/apache2/<%= default['apache_alias']['application_name'] %>-access.log combined
-  CustomLog /var/log/apache2/<%= default['apache_alias']['application_name'] %>-ganglia.log ganglia
+  ErrorLog /var/log/apache2/<%= node['apache_alias']['application_name'] %>-error.log
+  CustomLog /var/log/apache2/<%= node['apache_alias']['application_name'] %>-access.log combined
+  CustomLog /var/log/apache2/<%= node['apache_alias']['application_name'] %>-ganglia.log ganglia
 
   FileETag none
 
   RewriteEngine On
-  IncludeOptional /etc/apache2/sites-available/<%= default['apache_alias']['application_name'] %>.conf.d/rewrite*
+  IncludeOptional /etc/apache2/sites-available/<%= node['apache_alias']['application_name'] %>.conf.d/rewrite*
 
-  SetEnv "ftp_user_password" "<%= default['apache_alias']['ftp_password'] %>"
-  SetEnv "ftp_user_name" "<%= default['apache_alias']['ftp_user_name'] %>"
+  SetEnv "ftp_user_password" "<%= node['apache_alias']['ftp_password'] %>"
+  SetEnv "ftp_user_name" "<%= node['apache_alias']['ftp_user_name'] %>"
 
-  IncludeOptional /etc/apache2/sites-available/<%= default['apache_alias']['application_name'] %>.conf.d/local*
+  IncludeOptional /etc/apache2/sites-available/<%= node['apache_alias']['application_name'] %>.conf.d/local*
 </VirtualHost>
