--- a/nginx-custom/templates/default/site.erb
+++ b/nginx-custom/templates/default/site.erb
@@ -14,6 +14,15 @@ server {
 
   rewrite ^/blog$ /blog/ permanent;
   rewrite ^/blog/wp-admin$ /blog/wp-admin/ permanent;
+  rewrite ^(.*[^/])$ $1/ permanent;
+
+  client_max_body_size 11M;
+
+  satisfy any;
+  allow 10.0.0.0/8;
+  deny all;
+  auth_basic "Restricted Access for <%= @app_name %> staging";
+  auth_basic_user_file /etc/nginx/conf.d/htpasswd;
 
   location / {
     try_files $uri/index.html $uri/index.htm @unicorn;
@@ -48,7 +57,13 @@ server {
     deny all;
   }
 
-  error_page 500 502 503 504 /500.html;
+  error_page 503 @maintenance;
+  location @maintenance {
+    rewrite  ^(.*)$  /maintenance.html last;
+    break;
+  }
+
+  error_page 500 502 504 /500.html;
   location = /500.html {
     root /srv/www/<%= @app_name %>/current/public/;
   }
