--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -20,10 +20,15 @@ server {
 
   rewrite ^/blog$ /blog/ permanent;
   rewrite ^/blog/wp-admin$ /blog/wp-admin/ permanent;
+  rewrite ^(.*[^/])$ $1/ permanent;
 
-  <% if @application[:nginx] && @application[:nginx][:client_max_body_size] %>
-    client_max_body_size <%= @application[:nginx][:client_max_body_size] %>;
-  <% end %>
+  client_max_body_size 11M;
+
+  satisfy any;
+  allow 10.0.0.0/8;
+  deny all;
+  auth_basic "Restricted Access for <%= node[:hostname] %> staging";
+  auth_basic_user_file /etc/nginx/conf.d/htpasswd;
 
   location / {
     try_files $uri/index.html $uri/index.htm @unicorn;
@@ -56,7 +61,13 @@ server {
     deny all;
   }
 
-  error_page 500 502 503 504 /500.html;
+  error_page 503 @maintenance;
+  location @maintenance {
+    rewrite  ^(.*)$  /maintenance.html last;
+    break;
+  }
+
+  error_page 500 502 504 /500.html;
   location = /500.html {
     root <%= @application[:absolute_document_root] %>;
   }
@@ -87,10 +98,15 @@ server {
 
   rewrite ^/blog$ /blog/ permanent;
   rewrite ^/blog/wp-admin$ /blog/wp-admin/ permanent;
+  rewrite ^(.*[^/])$ $1/ permanent;
 
-  <% if @application[:nginx] && @application[:nginx][:client_max_body_size] %>
-    client_max_body_size <%= @application[:nginx][:client_max_body_size] %>;
-  <% end %>
+  client_max_body_size 11M;
+
+  satisfy any;
+  allow 10.0.0.0/8;
+  deny all;
+  auth_basic "Restricted Access for <%= node[:hostname] %> staging";
+  auth_basic_user_file /etc/nginx/conf.d/htpasswd;
 
   location / {
     try_files $uri/index.html $uri/index.htm @unicorn;
@@ -117,7 +133,13 @@ server {
     }
   }
 
-  error_page 500 502 503 504 /500.html;
+  error_page 503 @maintenance;
+  location @maintenance {
+    rewrite  ^(.*)$  /maintenance.html last;
+    break;
+  }
+
+  error_page 500 502 504 /500.html;
   location = /500.html {
     root <%= @application[:absolute_document_root] %>;
   }
