--- a/nginx-custom/templates/default/site.erb
+++ b/nginx-custom/templates/default/site.erb
@@ -18,6 +18,9 @@ server {
 
   client_max_body_size 11M;
 
+  set_real_ip_from 10.0.0.0/8;
+  real_ip_header   X-Forwarded-For;
+
   satisfy any;
   allow 10.0.0.0/8;
   deny all;
