--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -24,6 +24,9 @@ server {
 
   client_max_body_size 11M;
 
+  set_real_ip_from 10.0.0.0/8;
+  real_ip_header   X-Forwarded-For;
+
   satisfy any;
   allow 10.0.0.0/8;
   deny all;
@@ -101,6 +104,9 @@ server {
   rewrite ^(.*[^/])$ $1/ permanent;
 
   client_max_body_size 11M;
+
+  set_real_ip_from 10.0.0.0/8;
+  real_ip_header   X-Forwarded-For;
 
   satisfy any;
   allow 10.0.0.0/8;
