--- a/nginx-custom/templates/default/site.erb
+++ b/nginx-custom/templates/default/site.erb
@@ -21,7 +21,13 @@ server {
   if ($uri !~ "^/blog") {
     set $rule_0 2$rule_0;
   }
-  if ($rule_0 = "21") {
+  if ($uri !~ "^/fonts/") {
+    set $rule_0 3$rule_0;
+  }
+  if ($uri !~ "^/logos/") {
+    set $rule_0 4$rule_0;
+  }
+  if ($rule_0 = "4321") {
     rewrite ^(.*[^/])$ $1/ permanent;
   }
 
@@ -60,6 +66,8 @@ server {
     proxy_redirect off;
     proxy_cache off;
     proxy_pass <%= @proxy_url %>;
+    proxy_set_header X-Origin-Server nginx-proxy-pass;
+    proxy_pass_request_headers on;
   }
 
   location /nginx_status {
