--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -27,7 +27,13 @@ server {
   if ($uri !~ "^/blog") {
     set $rule_0 2$rule_0;
   }
-  if ($rule_0 = "21") {
+  if ($uri !~ "^/fonts/") {
+    set $rule_0 3$rule_0;
+  }
+  if ($uri !~ "^/logos/") {
+    set $rule_0 4$rule_0;
+  }
+  if ($rule_0 = "4321") {
     rewrite ^(.*[^/])$ $1/ permanent;
   }
 
@@ -88,6 +94,8 @@ server {
     proxy_redirect off;
     proxy_cache off;
     proxy_pass <%= node[:custom_nginx][:proxy_url] %>;
+    proxy_set_header X-Origin-Server nginx-proxy-pass;
+    proxy_pass_request_headers on;
   }
 }
 
@@ -117,7 +125,13 @@ server {
   if ($uri !~ "^/blog") {
     set $rule_0 2$rule_0;
   }
-  if ($rule_0 = "21") {
+  if ($uri !~ "^/fonts/") {
+    set $rule_0 3$rule_0;
+  }
+  if ($uri !~ "^/logos/") {
+    set $rule_0 4$rule_0;
+  }
+  if ($rule_0 = "4321") {
     rewrite ^(.*[^/])$ $1/ permanent;
   }
 
@@ -172,6 +186,8 @@ server {
     proxy_redirect off;
     proxy_cache off;
     proxy_pass <%= node[:custom_nginx][:proxy_url] %>;
+    proxy_set_header X-Origin-Server nginx-proxy-pass;
+    proxy_pass_request_headers on;
   }
 }
 <% end %>
