Update apache recipe

--- a/apache-custom/templates/default/site.erb
+++ b/apache-custom/templates/default/site.erb
@@ -6,6 +6,8 @@
   AliasMatch ^/blog(.*)$ /srv/www/<%= @app_name %>/current$1
 
   RewriteEngine On
+  RewriteCond %{HTTP:X-Origin-Server} !=nginx-proxy-pass
+  RewriteRule (.*) <%= @site_host %>$1 [R=301,L]
   RewriteRule ^(?!/blog)(.*) <%= @site_url %>$1 [R=301,L]
 
   <Directory /srv/www/<%= @app_name %>/current/>
