--- a/nginx-custom/templates/default/site.erb
+++ b/nginx-custom/templates/default/site.erb
@@ -27,7 +27,7 @@ server {
   if ($uri !~ "^/logos/") {
     set $rule_0 4$rule_0;
   }
-  if ($uri !~ ".jpg|.svg|.png|.jpeg|.html|.css|.js") {
+  if ($uri !~ ".jpg|.svg|.png|.jpeg|.html|.css|.js|.xml|.pdf") {
     set $rule_0 5$rule_0;
   }
   if ($uri !~ "^/projects") {
