Update recipe for prod env

--- a/wordpress/templates/default/wp-config.php.erb
+++ b/wordpress/templates/default/wp-config.php.erb
@@ -33,8 +33,8 @@ define('DB_CHARSET', 'utf8');
 /** The Database Collate type. Don't change this if in doubt. */
 define('DB_COLLATE', '');
 
-define('WP_HOME',"<%= node['wordpress']['wp_config']['home'] %>");
-define('WP_SITEURL',"<%= node['wordpress']['wp_config']['siteurl'] %>");
+define('WP_HOME',"<%= node['wordpress']['wp_config']['home'] %>/");
+define('WP_SITEURL',"<%= node['wordpress']['wp_config']['siteurl'] %>/");
 
 define('ALTERNATE_WP_CRON', false);
 define('DISABLE_WP_CRON', true);
