Fix url rewriting

--- a/nginx-custom/templates/default/site.erb
+++ b/nginx-custom/templates/default/site.erb
@@ -25,7 +25,7 @@ server {
   if ($uri !~ "^/blog") {
     set $rule_0 2$rule_0;
   }
-  if ($uri !~ "^/fonts/") {
+  if ($uri !~ "/fonts/") {
     set $rule_0 3$rule_0;
   }
   if ($uri !~ "^/logos/") {
