--- a/unicorn/templates/default/nginx_unicorn_web_app.erb
+++ b/unicorn/templates/default/nginx_unicorn_web_app.erb
@@ -31,7 +31,7 @@ server {
   if ($uri !~ "^/blog") {
     set $rule_0 2$rule_0;
   }
-  if ($uri !~ "^/fonts/") {
+  if ($uri !~ "/fonts/") {
     set $rule_0 3$rule_0;
   }
   if ($uri !~ "^/logos/") {
@@ -139,7 +139,7 @@ server {
   if ($uri !~ "^/blog") {
     set $rule_0 2$rule_0;
   }
-  if ($uri !~ "^/fonts/") {
+  if ($uri !~ "/fonts/") {
     set $rule_0 3$rule_0;
   }
   if ($uri !~ "^/logos/") {
