--- a/ghost/templates/default/config.js.erb
+++ b/ghost/templates/default/config.js.erb
@@ -10,7 +10,7 @@ config = {
     // When running Ghost in the wild, use the production environment
     // Configure your URL and mail settings here
     production: {
-        url: '<%= @domain %>',
+        url: 'http://<%= @domain %>',
         mail: {},
         database: {
             client: 'mysql',
