Add nginx for ghost

--- a/nginx/templates/default/site.erb
+++ b/nginx/templates/default/site.erb
@@ -7,7 +7,7 @@ server {
   satisfy any;
   allow 10.0.0.0/8;
   deny all;
-  auth_basic "Restricted Access for <%= @app_name %> staging";
+  auth_basic "Restricted Access for <%= node[:hostname] %>  staging";
   auth_basic_user_file /etc/nginx/conf.d/htpasswd;
 
   location / {
