Update ghost recipe

--- a/ghost/templates/default/config.js.erb
+++ b/ghost/templates/default/config.js.erb
@@ -33,6 +33,12 @@ config = {
             host: '127.0.0.1',
             // Port to be passed to node's `net.Server#listen()`, for iisnode set this to `process.env.PORT`
             port: '2368'
+        },
+        aws: {
+            accessKeyId: '<%= @s3_access_id %>',
+            secretAccessKey: '<%= @s3_access_secret %>',
+            bucket: '<%= @s3_bucket %>',
+            region: '<%= @s3_region %>'
         }
     }
 };
